the_project/manifests/deployment-todo-app.yaml
# todo-app:v4 frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: inosha1/todo-app:v4
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /app/images   # 
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: picsum-pvc   #
