the_project/manifests/deployment-todo-backend.yaml
# todo-backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: project

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: inosha1/todo-backend:v1
          imagePullPolicy: Always
