the_project/manifests/service.yaml
# todo-app frontend
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---
# todo-app backend

apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 4000
