the_project/manifests/todo-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db
  namespace: project
spec:
  serviceName: todo-db
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  namespace: project
spec:
  clusterIP: None
  selector:
    app: todo-db
  ports:
    - port: 5432
